k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: house-hold
  labels:
    app.kubernetes.io/name: house-hold
